fix: :wrench: adjust building position on small screen

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -278,5 +278,10 @@
         top: 59%;
         transform: translateZ(-25px) scale(3);
     }
+    .building {
+        top: 40vh;
+        left: 35vw;
+        transform: translateZ(-35px) scale(5);
+    }
 }
 
